@@ -3,7 +3,9 @@ package classes.models;
 import enums.FormDetails;
 import lombok.Getter;
 import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -17,15 +19,14 @@ public final class SearchMovie {
     private String title = "";
     @Setter
     private String genre = FormDetails.defaultGenre();
-    private final Predicate<MovieGenres> filterTitle = p -> p.getTitle().toLowerCase().contains(title.toLowerCase());
+    private final Predicate<MovieGenres> filterTitle = p -> StringUtils.containsIgnoreCase(p.getTitle(), title);
 
     private Predicate<MovieGenres> filterGenre() {
-        return !FormDetails.defaultGenre().equals(genre) ? c -> c.getGenres().toLowerCase().contains(genre.toLowerCase()) : p -> true;
-
+        return !FormDetails.defaultGenre().equals(genre) ? p -> StringUtils.containsIgnoreCase(p.getGenres(), genre) : p -> true;
     }
 
     public SearchMovie(List<MovieGenres> LIST) {
-        list = LIST;
+        list = Collections.unmodifiableList(LIST);
     }
 
 
@@ -33,7 +34,11 @@ public final class SearchMovie {
         return list.stream()
                 .filter(filterTitle)
                 .filter(filterGenre())
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
+    public String toString() {
+        return list.stream().toList().toString();
+    }
 }
